--- a/my-app/src/Styles/Header.css
+++ b/my-app/src/Styles/Header.css
@@ -1,14 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
-
+@import "./index.css";
 
 #header {
+    width: 1440px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-h1 {
-    display: none;
 }
 
 nav {
