--- a/my-app/src/Pages/404/Error.css
+++ b/my-app/src/Pages/404/Error.css
@@ -1,11 +1,11 @@
-#blocError{
+.message-error{
 max-width: 95%;
 margin: 0 auto;
 padding-bottom: 40px;
 /* color: $color-secondary; */
 }
 
-#blocError-infos{
+.error-contents{
 display: flex;
 flex-direction: column;
 justify-content: center;
@@ -13,7 +13,7 @@ align-items: center;
 min-height: calc(100vh - 250px);
 }
 
-#blocError-title{
+.error-title{
 font-weight: 700;
 font-size: 288px;
 color : rgba(255, 96, 96, 1);
@@ -21,14 +21,14 @@ font-family: Montserrat;
 margin: 0;
 }
         
-#blocError-text{
+.error-text{
 font-weight: 500;
 font-size: 36px;
 font-family: Montserrat;
 color: rgba(255, 96, 96, 1);
 }
 
-#blocError-link{
+.error-link{
 display: block;
 text-align: center;
 font-weight: 500;
@@ -36,3 +36,18 @@ font-size: 18px;
 font-family: Montserrat;
 color: rgba(255, 96, 96, 1);
 }
+
+
+@media screen and (max-width: 375px) {
+    .error-title{
+        font-size: 96px;
+    }
+    .error-text{
+        font-size: 18px;
+        text-align: center
+    }
+    .error-link{
+        font-size: 14px;
+    }
+    
+  }
