--- a/my-app/src/Styles/Footer.css
+++ b/my-app/src/Styles/Footer.css
@@ -1,6 +1,6 @@
 @import "./index.css";
 
-#footer {
+.footer {
     width : 100%;
     height :209px;
     margin-top: 50px;
@@ -14,3 +14,13 @@ img {
     height: 60%;
     padding-bottom: 29px;
 }
+
+@media (max-width: 375px) {
+    .footer {
+      height: 209px;
+    }
+    img {
+        height: 40%;
+        padding-bottom: 60px;
+    };
+  }
