--- a/my-app/src/Styles/Header.css
+++ b/my-app/src/Styles/Header.css
@@ -1,7 +1,7 @@
 @import "./index.css";
 
-#header {
-    width: 1440px;
+.header {
+    width: 1240px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -18,3 +18,28 @@ nav a {
     font-family: Montserrat;
     font-size: 24px;
 }
+
+figure {
+    margin-left: 0;
+}
+
+@media (max-width: 375px) {
+    
+    .header {
+        width: auto;
+        padding: 0px 20px;
+    }
+    
+    nav {
+    width: 100%;
+    }
+    
+    nav a {
+    font-size: 18px;
+    }
+    
+    .logo-kasa {
+        width: 134px;
+        padding-bottom: 0;
+    }
+    }
