--- a/my-app/src/Styles/index.css
+++ b/my-app/src/Styles/index.css
@@ -12,4 +12,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-
+@media screen and (max-width: 375px) {
+  body {
+    width: 100%;
+    }
+  
+}
