--- a/my-app/src/Styles/Header.css
+++ b/my-app/src/Styles/Header.css
@@ -17,7 +17,15 @@ nav a {
     color : rgba(255, 96, 96, 1);
     font-family: Montserrat;
     font-size: 24px;
+    text-decoration: none;
 }
+nav a:hover {
+    text-decoration: underline;
+}
+.activeLink {
+    text-decoration: underline;
+    font-weight: bold;
+  }
 
 figure {
     margin-left: 0;
